<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/trxcategory_type"
        android:textAlignment="center"
        android:textSize="@dimen/headline5_text_size"
        app:layout_constraintBottom_toTopOf="@id/trxcategory_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/trxcategory_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/trxcategory_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialTextView">

        <include
            android:id="@+id/trxcategory_iv"
            layout="@layout/recycler_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/trxcategory_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:hint="@string/category"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="@dimen/headline5_text_size"
        app:layout_constraintBottom_toTopOf="@id/subcategories_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trxcategory_container" />

    <HorizontalScrollView
        android:id="@+id/subcategories_scroll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/done_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trxcategory_category"
        tools:visibility="visible">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/subcategory_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="0dp"
            app:singleSelection="true" />
    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_half_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:backgroundTint="?attr/colorPrimary"
        android:gravity="center"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        android:text="@string/done"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subcategories_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>