<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/account_type"
        android:textAlignment="center"
        android:textSize="@dimen/headline5_text_size"
        app:layout_constraintBottom_toTopOf="@id/account_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/account_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@id/account_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialTextView">

        <include
            android:id="@+id/account_iv"
            layout="@layout/recycler_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/account_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:hint="@string/account_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="@dimen/headline5_text_size"
        app:layout_constraintBottom_toTopOf="@id/done_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_half_margin"
        android:layout_marginTop="@dimen/small_half_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:backgroundTint="?attr/colorPrimary"
        android:gravity="center"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        android:text="@string/done"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_btns"
        app:layout_constraintTop_toBottomOf="@id/account_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/small_half_margin"
        android:backgroundTint="?attr/colorError"
        android:gravity="center"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        app:icon="@drawable/ic_baseline_delete"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/grayish_white"
        android:textColor="?attr/colorOnError"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="@id/done_btn"
        app:layout_constraintEnd_toStartOf="@id/guideline_btns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/done_btn"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>